fixing sch. layout issue and toggle for no shows

--- a/views/schedule/schedule.css
+++ b/views/schedule/schedule.css
@@ -1,5 +1,28 @@
 .headerTile {
-    height:60px;
+    text-align: center;
+    padding-top : 12px;
+    padding-bottom: 12px;
+    width :18%;
+    margin : 2px;
+}
+
+.dayScheduleWrapper {
+
+}
+.dayScheduleColumn {
+    width :18%;
+    margin : 2px;
+    min-height: 130px;
+}
+
+.todaysDate {
+    border : 1px solid red;
+}
+
+.monthDayHeader {
+    width : 15%;
+    text-align: center;
+    font-size:small;
 }
 
 .cats {
@@ -70,6 +93,10 @@
 .noshow {
     color : red;
     text-decoration: line-through;
+}
+
+.buttonStateOn {
+    background-color : dimgrey;
 }
 
 .qFlag {
